tests/k8s_testcases/network-policy-checks-bad-path/spec_policytypes_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spec-policytypes-test-type
  namespace: kube-system
spec:
  podSelector: {}
  # wrong type
  policyTypes:
    Ingress
    Egress
  ingress:
    - from:
        - namespaceSelector: { }
          podSelector: { }
  egress:
    - to:
        - namespaceSelector: { }
          podSelector: { }
